<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_16"
        android:layout_marginVertical="@dimen/spacing_8">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/spacing_16">

            <ImageView
                android:id="@+id/iv_path_small"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/spacing_8"
                android:layout_marginTop="@dimen/spacing_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_launch_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/spacing_8"
                android:layout_marginTop="@dimen/spacing_8"
                app:layout_constraintStart_toEndOf="@+id/iv_path_small"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_mission"
                    style="@style/SmallGreyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:labelFor="@+id/tv_mission_value"
                    android:text="@string/label_mission"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_date_time"
                    style="@style/SmallGreyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:labelFor="@+id/tv_date_time_value"
                    android:text="@string/label_date_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_mission" />

                <TextView
                    android:id="@+id/tv_rocket"
                    style="@style/SmallGreyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:labelFor="@+id/tv_rocket_value"
                    android:text="@string/label_rocket"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_date_time" />

                <TextView
                    android:id="@+id/tv_days_since_from_now"
                    style="@style/SmallGreyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:labelFor="@+id/tv_days_since_from_now_value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_rocket" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_launch_value"
                android:layout_width="wrap_content"

                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_8"
                app:layout_constraintStart_toEndOf="@+id/cl_launch_label"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_mission_value"
                    style="@style/SmallGreyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_mission"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_date_time_value"
                    style="@style/SmallGreyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_date_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_mission_value" />

                <TextView
                    android:id="@+id/tv_rocket_value"

                    style="@style/SmallGreyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_rocket"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_date_time_value" />

                <TextView
                    android:id="@+id/tv_days_since_from_now_value"
                    style="@style/SmallGreyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_rocket_value" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/iv_success_fail"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>